# cargo-feature-combinations

./: .bumpversion.cfg  .bumpversion.toml  .eslintrc.cjs  .gitattributes  .gitignore  .goreleaser.yaml  .typos.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md  action.ts  action.yml  clippy.toml  cooldown.toml  deps.taskfile.yaml  eslint.config.mjs  mise.toml  package.json  release.sh  target-support.md  taskfile.yaml  tsconfig.json
.cargo/: config.toml
.github/workflows/: build.yaml  build.yml  lint.yaml  pages.yaml  release.yaml  release.yml  test-action.yaml  test-action.yml  test.yaml  test.yml
docs/: GITHUB_ACTIONS.md  go.mod
docs/assets/: _custom.scss
docs/assets/terminals/: aggregate-targets.html  check.html  dedupe.html  diagnostics.html  hero.html  matrix.html  pruned.html  recipe-incompatible.html  recipe-large.html  recipe-optional.html  recipe-per-cmd-build.html  recipe-per-cmd-test.html  recipe-restrict.html  summary.html  targets.html
docs/content/: _index.md
docs/content/docs/: faq.md  introduction.md
docs/content/docs/ci/: github-actions.md
docs/content/docs/commands/: _index.md  cli-reference.md  matrix.md  output-modes.md  running-commands.md
docs/content/docs/configuration/: _index.md  basics.md  environment.md  feature-matrix.md  flags.md  override-model.md  per-command.md  per-target.md
docs/content/docs/recipes/: cross-compilation-ci.md  incompatible-features.md  large-feature-sets.md  optional-dependencies.md  per-command-differences.md  restrict-matrix.md
docs/content/docs/targets/: _index.md  configured-targets.md  drivers.md
docs/layouts/_partials/docs/inject/: menu-before.html
docs/layouts/shortcodes/: terminal.html
examples/: README.md
examples/clean/: Cargo.toml
examples/clean/crates/cli/: Cargo.toml
examples/clean/crates/cli/src/: lib.rs
examples/clean/crates/engine/: Cargo.toml
examples/clean/crates/engine/src/: lib.rs
examples/diagnostics/: Cargo.toml
examples/diagnostics/crates/loader/: Cargo.toml
examples/diagnostics/crates/loader/src/: lib.rs
examples/docs/recipes/incompatible-features/: Cargo.toml
examples/docs/recipes/incompatible-features/src/: lib.rs
examples/docs/recipes/large-feature-sets/: Cargo.toml
examples/docs/recipes/large-feature-sets/src/: lib.rs
examples/docs/recipes/optional-dependencies/: Cargo.toml
examples/docs/recipes/optional-dependencies/redis-backend/: Cargo.toml
examples/docs/recipes/optional-dependencies/redis-backend/src/: lib.rs
examples/docs/recipes/optional-dependencies/sled-backend/: Cargo.toml
examples/docs/recipes/optional-dependencies/sled-backend/src/: lib.rs
examples/docs/recipes/optional-dependencies/store/: Cargo.toml
examples/docs/recipes/optional-dependencies/store/src/: lib.rs
examples/docs/recipes/per-command/: Cargo.toml
examples/docs/recipes/per-command/src/: lib.rs
examples/docs/recipes/restrict-matrix/: Cargo.toml
examples/docs/recipes/restrict-matrix/src/: lib.rs
examples/pruning/: Cargo.toml
examples/pruning/crates/app/: Cargo.toml
examples/pruning/crates/app/src/: lib.rs
examples/targets/: Cargo.toml
examples/targets/crates/app/: Cargo.toml
examples/targets/crates/app/src/: lib.rs
plan/: config-override-chain-redesign.md  per-target-feature-combinations.md  review-2026-07-robustness-and-architecture.md
rules/: doc-after-attribute.yml
scripts/: screenshots.sh  terminals.sh
src/: cargo_alias.rs  cfg_eval.rs  cli.rs  config.rs  diagnostics_only.rs  driver.rs  fc.rs  feature-combinations.rs  features.rs  hints.rs  implication.rs  invocation_args.rs  lib.rs  main.rs  matrix.rs  package.rs  runner.rs  target.rs  target_install.rs  target_plan.rs  tee.rs  workspace.rs
src/config/: env.rs  flags.rs  mod.rs  patch.rs  resolve.rs  schema.rs  scope.rs  validate.rs
src/plan/: execution.rs  mod.rs  targets.rs
test-data/: diagnostics_only_json_output.txt
test-data/optional-deps-crate/: Cargo.toml
tests/: allow_feature_sets.rs  driver.rs  metadata_key_aliases.rs  per_subcommand.rs  per_target.rs  prune_implied.rs  single_mod_multiple_errors_stderr.txt  skip_optional_dependencies.rs  target_overrides.rs  too_many_configurations.rs  two_mods_warnings_stderr.txt
tests/common/: mod.rs
website/: go.mod  go.sum  hugo.toml
website/assets/: _syntax.scss
website/assets/terminals/: dedupe.html  diagnostics.html  matrix.html  recipe-large.html  recipe-per-cmd-build.html  recipe-per-cmd-test.html  recipe-restrict.html  summary.html  targets.html
website/content/: _index.md
website/content/docs/: _index.md  faq.md  installation.md  quick-start.md
website/content/docs/ci/: _index.md
website/content/docs/commands/: cli-reference.md  output-modes.md
website/content/docs/configuration/: _index.md  basics.md  feature-matrix.md  flags.md
website/content/docs/recipes/: _index.md  restrict-matrix.md
website/content/docs/targets/: configured-targets.md  installing-targets.md
website/layouts/_partials/docs/inject/: head.html
website/layouts/shortcodes/: cargofile.html  img.html
