[package]
name = "cargo-feature-combinations"
version = "0.0.16"
edition = "2021"
authors = ["romnn <contact@romnn.com>"]
description = "run cargo commands for all feature combinations"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/romnn/cargo-feature-combinations"
repository = "https://github.com/romnn/cargo-feature-combinations"
categories = [
  "command-line-utilities",
  "development-tools",
  "development-tools::cargo-plugins",
  "development-tools::testing"
]
keywords = [
  "cargo",
  "features",
  "combinations",
  "tool",
  "subcommand"
]
exclude = [
  "tests/"
]
default-run = "cargo-fc"

[[bin]]
name = "cargo-fc"
path = "src/fc.rs"

[[bin]]
name = "cargo-feature-combinations"
path = "src/feature-combinations.rs"

[features]
default = []

[package.metadata.cargo-feature-combinations]
denylist = ["default"]

[package.metadata.cargo-feature-combinations.matrix]
str-key = "str-value"
str_key = "str_value"
num_key = 2

[dependencies]
color-eyre = "0"
cargo_metadata = "0"
serde = "1"
serde_json = "1"
itertools = "0"
termcolor = "1"
regex = "1"
lazy_static = "1"
strip-ansi-escapes = "0"
serde_json_merge = "0"

[dev-dependencies]
pretty_assertions = "1"
