[package]
name = "cargo-feature-combinations"
version = "0.0.37"
edition = "2024"
authors = ["romnn <contact@romnn.com>"]
description = "run cargo commands for all feature combinations"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/romnn/cargo-feature-combinations"
repository = "https://github.com/romnn/cargo-feature-combinations"
categories = [
  "command-line-utilities",
  "development-tools",
  "development-tools::cargo-plugins",
  "development-tools::testing"
]
keywords = [
  "cargo",
  "features",
  "combinations",
  "tool",
  "subcommand"
]
exclude = [
  "tests/"
]
default-run = "cargo-fc"

[[bin]]
name = "cargo-fc"
path = "src/fc.rs"

[[bin]]
name = "cargo-feature-combinations"
path = "src/feature-combinations.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[features]
default = []

[package.metadata.cargo-feature-combinations]
denylist = ["default"]

[package.metadata.cargo-feature-combinations.matrix]
str-key = "str-value"
str_key = "str_value"
num_key = 2

[dependencies]
color-eyre = "0"
cargo_metadata = "0"
itertools = "0"
regex = "^1.11"

# serde
serde = "1"
serde_json = "1"
serde_json_merge = "0"

# terminal colors
termcolor = "1"
strip-ansi-escapes = "0"

[dev-dependencies]
similar-asserts = "1"
