[package]
name = "cargo-feature-combinations"
version = "0.0.41"
edition = "2024"
authors = ["romnn <contact@romnn.com>"]
description = "run cargo commands for all feature combinations"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/romnn/cargo-feature-combinations"
repository = "https://github.com/romnn/cargo-feature-combinations"
categories = [
  "command-line-utilities",
  "development-tools",
  "development-tools::cargo-plugins",
  "development-tools::testing"
]
keywords = [
  "cargo",
  "features",
  "combinations",
  "tool",
  "subcommand"
]
exclude = [
  "test-data/",
  "taskfile.yaml",
  "action.yml",
  "TODO.md",
  ".github",
  ".bumpversion.toml",
  ".goreleaser.yaml",
  ".typos.toml",
  ".ignore",
]
default-run = "cargo-fc"

[[bin]]
name = "cargo-fc"
path = "src/fc.rs"

[[bin]]
name = "cargo-feature-combinations"
path = "src/feature-combinations.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "symbols"

[features]
default = []

[package.metadata.cargo-feature-combinations]
denylist = ["default"]

[package.metadata.cargo-feature-combinations.matrix]
str-key = "str-value"
str_key = "str_value"
num_key = 2

[dependencies]
color-eyre = "0.6"
cargo_metadata = "0.20"
itertools = "0.14"
regex = "1.11"

# serde
serde = "1"
serde_json = "1"
serde_json_merge = "0"

# terminal colors
termcolor = "1.4"
strip-ansi-escapes = "0.2"

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = "0.1"

[dev-dependencies]
similar-asserts = "1"
semver = "1"
cargo_metadata = { version = "0.20", features = ["builder"] }
cargo-util-schemas = "0.2"
