[package]
name = "optional-deps-crate"
version = "0.1.0"
edition = "2021"

[features]
A = []
B = ["A"]
C = ["dep:optDepC"]

[dependencies]
fixDepA = { path = "fixDepA" }
oDepB = { path = "optDepB", package = "optDepB", optional = true }
optDepC = { path = "optDepC", optional = true }

[package.metadata.cargo-feature-combinations]
# Exclude the implicit `default` feature from the matrix to simplify testing.
exclude_features = ["default"]
# Enable skipping optional dependencies for this fixture crate.
skip_optional_dependencies = true
